# ff7-remake-game-script

./: .gitignore  README.md  mise.toml  pyproject.toml  ruff.toml
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  ScriptViewer.tsx  index.css  types.ts
client/src/components/: ChapterItem.tsx  DialogueCard.tsx  Header.tsx  NavigationContent.tsx  NavigationFooter.tsx  ReaderContent.tsx  ScriptReader.tsx
client/src/data/: ffvii_remake_script.json
client/src/hooks/: useChaptersData.ts  useChaptersNavigation.ts  useSidebarState.ts
client/src/providers/: fontSize.tsx  theme.tsx
game_script_parser/: characters.py  main.py  test_main.py
